syntax = "proto3";

package common;


enum FuturesTypeEnum {
    FUTURES_COIN_M = 0;
    FUTURES_USD_M = 1;

    reserved 2 to 50;
}

enum FetchDataSource {
    DATA_SOURCE_TRADEWAGON = 0;
    DATA_SOURCE_BINANCE = 1;
}

enum DataMarketEnum {
    DATA_MARKET_CRYPTO = 0;
    DATA_MARKET_STOCKS = 1;

    reserved 2 to 50;
}
